[gd_scene load_steps=4 format=3 uid="uid://bx5fjserd040x"]

[ext_resource type="TileSet" uid="uid://cbg1eym0o7j7c" path="res://resources/tilesets/room.tres" id="1_a5o1s"]
[ext_resource type="Script" path="res://scripts/room_scripts/room.gd" id="1_qgrmu"]
[ext_resource type="Script" path="res://scenes/room_scenes/navigation_tile_layer.gd" id="3_dslbh"]

[node name="Room" type="Node2D"]
script = ExtResource("1_qgrmu")

[node name="Floor" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("1_a5o1s")
script = ExtResource("3_dslbh")

[node name="top walls" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("1_a5o1s")

[node name="bottom walls" type="TileMapLayer" parent="."]
z_index = 2
scale = Vector2(4, 4)
tile_set = ExtResource("1_a5o1s")

[node name="Furniture map" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("1_a5o1s")

[node name="Entrance" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="ExitZones" type="Area2D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="ExitZones" to="." method="_on_exit_zones_body_entered"]
